major bug fixes, heading visibility issues, and heading consitency fixed

--- a/Frontend/src/pages/Carousel/car.module.css
+++ b/Frontend/src/pages/Carousel/car.module.css
@@ -2,19 +2,29 @@
     font-family: 'Mulish', sans-serif;
     src: url("../../fonts/Mplus1p-Regular.otf");
 }
-
+.carouselContainer{
+    margin-top: 15rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10rem;
+    /* border: 2px solid #ffffff; */
+}
 .carousel3dcompCont{
     display: flex;
     justify-content: center;
     width: 80%;
-    margin: 100px auto;
+    margin: 0 auto;
 }
 
 .heading{
+  position: relative;
     font-size: 4rem;
     padding-bottom: 0px;
-    margin-bottom: 0px;
-    padding-top: 70px;
+    margin-bottom: 4rem;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
 }
 .videocontainer{
     height: 400px;
