--- a/Frontend/src/pages/Incentives/Incentives26/ScrollStack.css
+++ b/Frontend/src/pages/Incentives/Incentives26/ScrollStack.css
@@ -23,25 +23,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 13rem;
+  top: 13.5rem;
   padding-bottom: 3rem;
   color: white;
-  font-size: 5rem;
+  font-size: 4rem;
+  font-weight: 700;
 }
 
 @media (max-width: 480px) {
   .heading{
-    font-size: 4rem;
+    font-size: 3rem;
     top: 13.5rem;
     padding-bottom: 1rem;
   }
-
-  
 }
 
 @media (max-width: 1100px) {
   .heading{
-    font-size: 4.3rem;
+    font-size: 3.5rem;
     top: 11rem;
     padding-bottom: 2rem;
   }
